Add Harper's PGP key

--- a/data/authors/h4rpr.mdx
+++ b/data/authors/h4rpr.mdx
@@ -23,3 +23,64 @@ microbiology with a focus on laboratory research at the University of Alabama.
 Harper joined the OpenSats team part-time in 2022 to oversee the initiative’s
 operations, and in 2023 dedicated his full focus to scaling the organization in
 an effort to increase funding for bitcoin and FOSS development.
+
+---
+
+### PGP Key
+
+Fingerprint: `E656 BD90F D096 73A7`
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+mQINBGR1De4BEADBN7WOXT8NY/ljn9RqHUmt1NzO28fRP6OCbFVkwGtBX8zjdEkA
+g1HscSc8dFWHFUhR9KrnIqIU7DU2pLsEZKfzcSU0XQizGSHBwWEJwSfsULuMS8id
+942FSu8TIW/QLEbpEQi2w2LOpYNtja1bqpGsCcymEqc6vyA2eX34YAZitI4Ttv+2
+ByKQq5Afu2K5uLbbAjxH7lWNlnOoUOKge/OL3jm+QwmpYhScmC/NZVaJG6pesd+5
+AVn5RbAw4a9tocN1SHlSlB+7yZds0CLeGa6e1k25qY8kls8DuIbedvwiSK7DMEdT
+Gbn6q3nQAnEdUJNoQWD6ETRj4eeJW/pjMHYcrybYW4BnzFBhVxC8P0LjRiGq6ZN2
+LjPTFx6Xt8gqI1tPGLTT8wCmGKb9kC126NUrKLZgU1RfkfUN+HGMcie7+yROU6Wc
+3dbGFa/zjUoYviAdytjpUgw5O7wzRpS954HbUWoiSvj81LZOxfnEG9PqSez+PSZQ
+suXIJf82SLYdxJFzBNTXFY/KK3KHbZEU/gJ6KHxrPkltVQdj7t/msAARxQDyXSms
+vedk1Y7pDGwcq9VHOwj1eh2G8nvM/+5maD4O1TiccpHW3fldDCb+txSwhwICo2ve
+mzLajAPDm4Sdv+MlRysgTBp2gR7JbuZpMoPtPp9O5K4saMEZKvc1KJgUqwARAQAB
+tBxoYXJwZXIgPGhhcnBlckBvcGVuc2F0cy5vcmc+iQJUBBMBCAA+FiEEptx4j/4U
+jgp7kubuZWvZD9CWc6cFAmR1De4CGwMFCQeGHiUFCwkIBwIGFQoJCAsCBBYCAwEC
+HgECF4AACgkQZWvZD9CWc6fTpA/+KcU69T6Dm5OGvoetyLr8O29OYtlVbURcyxi9
+gkxqMb4mBLpDCAI1tqYzdAPY45DeM0Iv7LQLRfZQrpIB6aKo12/fMOcEn87Zhvi6
+YOtfmR7TId5T++BvOPGZsHVewtAhYuVUz7RT0rhScZrKKi1/H1sSJR6FcB4rJG46
+1cdUR4otN7+fsezs4BCVl8hJHznf0kjfKj1ttyPaR4VFHWnlr6j3K8ESalRJXKJU
+I9uKbdv2hDA0jcm5aeSyKfO3qdn6yq3g2ciYMhjxNuHJK47l6XwUkdiVxdOAtNj5
+s6SsO5SplhkGSBSHXsPQGUXJzOdfp0Z4ZAmB1P0pY/JVtbiKzdmG0+JoFY3i2t2n
+uOfrq7j5THib6z767wSH3vnZcln+uuW1KiDXb1aVuVqDDBvi1zfyDOLZkmKn/gu1
+jeQu0+nGFM0/vLfgtZf0vYaW6lbxOeKIy7ecfyTq/6vNrqlDkjOFJNRNHYsHt6J6
+uHGy2nDv3VldpEsi/MAKRH4wQfuqxlsXPy1LZnwbwK8OtBgZT9vx4TrDQqYaDg0h
+fWQTbu+FiNuNOI7VGBJortp63E4CwPZWevC/w+vnALfsOA0yyYTJIlancAiR4YKc
+qJa3y7JlOWOy9hq/j9nGC0Amw9VURl0r2l4hllY+IlDPjnVkGB/VtMT3bfvASFEh
+fmtoKsi5Ag0EZHUN7gEQANIfe7aIGq40pll1ese/rC7K92fvRFZRQCuzx+CfmcuI
+IM5KvOek5MPs9GmhXaC2QXvxADOXjm4hym8SDwhMQhx9d543t3WBFlHRjfXiwFwA
+f8ktLdPhP0SB/chpLbNyE210Y9V2tE5W4ORjZwK2k57jTrfuCC/QK7eFUCJ/pgJE
+EdvMU91GY2CkRUHMVqfRC/Qi9yIXTvilRAS118ORMUnYGc3Kv7JpFiYFK5ARv6fo
+cI1N3uJtB4rJizUrAiIvDaoCtdkXCI5pxkrrChT35noUUge85jcd5cQGSN0BUcsp
+CE4pXD6wuVBjp9EzPJDtj/Tg9mkvDojZBs25O8yR+RAVacStIGyvNpqgRS3zXlmh
+/jsd7cMSqOV5GpOzQRVxmN7kxsxX323MANsScuzEWFbvUymoofUTMJXjc8m/4ltk
+gyGQe4dRpz0U12U+EDUsJq7P5wSk4r5DsXtUPesjNZLVdjy68Y2k8/KdfDkHOiDb
+4eqWqcZco6aYHBjR69ck/umDrhcBTDdQZLas/AUNBh84N28P4zh3xRGyGh9y78te
+URrEdPKeKJRsXLh0bC1GR1ZgeALlurdKBqHBC0mjXYlE+Uchllng97IY+yJtzD2Y
+wtI9U0bNk5q3s2YqWHmxULMukPnVlJtGUZNe7tkb12u9PwW9+J+/GZUkDaaJnQaJ
+ABEBAAGJAjwEGAEIACYWIQSm3HiP/hSOCnuS5u5la9kP0JZzpwUCZHUN7gIbDAUJ
+B4YeJQAKCRBla9kP0JZzpwPhEAC6e+qmElvrBjBex7oJvR+lC17dOekWpkMAVxSU
+CeokqpWJUWwUpE04ZIwwxbm+AqAqITrlCdXWIQnxhy1Uk9LKan+CPUYvORtpuc2g
+bIgDwspGWNIoPjlus3uL35UapZQ7MTMay1zuH7MBE3hDTw+1p001lKi09Kvi/wdS
+ApIO54PmquqWpKMfPqDPm6d4myxLnY7C4+GR5D/twWrKpuMBsfinPdlI+dfhIAm7
+gJE8cC/UAVgopjBhYf9X47hWgqxCpheOOHchYMWmCX4qhKZpG1t16FtOuXtjo/DE
+Mspos6J1Xsh3B6kpbbBdi/irfmcGsYWA57OgI7Pori4BcYNMfrBe+ByISOR6KFoI
+JaoXbJ+OX6tTMByNTfiAiJbe9/lIQFggQ81kC4NR1oqUE4gxvYrN7rk6GX5byI+Q
+TZmEibumxTvcGkjATOM5Zdl4TTp5ScNrpTwh2Y0OkEr5XXp2lPNZ8mCxjsKF0NzR
+kw7X+S0NkfPEkSOHjpucK6kDbWNwlTN5EOMl1AJEuENVre413MsFLEsp2Xg2Wynw
+BjzPmzqz+sQcMEggxHUE733IGQo3q9ssaXKNvqEfP9JiVJzZEwwDxi2hRnqb/Dka
+3gRYWiJjfN93SVT5YzpNFNJUK6ogIYvfvC7A6NpbvWdtRv7i2jUU4q26cJ8lSC3F
+mPnK8g==
+=wupX
+-----END PGP PUBLIC KEY BLOCK-----
+```
