--- a/data/authors/abitcoinperson.mdx
+++ b/data/authors/abitcoinperson.mdx
@@ -10,9 +10,22 @@ github: https://github.com/abitcoinperson
 board: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
+Ben is a Bitcoiner. He started [OpenSats](https://opensats.org/), a 100%
+pass-through non-profit org focusing on funding contributors to Bitcoin and
+related FOSS projects, and [The Bitcoin Company](https://thebitcoincompany.com),
+a Bitcoin-only fintech focused on bringing privacy-focused financial products to
+the world.
+
+Ben loves game theory, privacy, freedom tech, and Bitcoin. He also has a deep
+disdain for “charities” that siphon off donations for their often lavish
+operational expenditures, so he created OpenSats as a transparent and efficient
+100% pass-through organization which attempts to help solve the free rider
+problem within the FOSS contributor space by creating a more sustainable
+ecosystem of builders and by ensuring that every cent or sat donated goes
+directly through to those giving back.
+
+He hopes that, with your support, OpenSats will continue to fund builders on
+Bitcoin and other FOSS projects generously giving their time to build the tools
+which will help separate government from money, avoid a world of CBDCs, and
+accelerate the inevitable and overdue adoption of freedom tech and a fair money
+for the world.
