Fix j9's twitter handle

--- a/data/authors/j9.mdx
+++ b/data/authors/j9.mdx
@@ -4,7 +4,7 @@ nym: j9
 avatar: /static/images/board/j9.jpg
 occupation: Privacy Girl
 company: Bitcoin
-twitter: https://twitter.com/j9
+twitter: https://twitter.com/j9roem
 github: https://github.com/enegnei
 board: true
 ---
