Make FAQ essence bold, not a list item

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -7,7 +7,9 @@ layout: PageLayout
 
 ## What are you doing at OpenSats?
 
-- Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which aims to fund Bitcoin-related free and open-source projects and associated education and research initiatives.
+**Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which
+aims to fund Bitcoin-related free and open-source projects and associated
+education and research initiatives.**
 
 We want to see contributors to Bitcoin Core and FOSS (free and open-source)
 tools supported by a sustainable ecosystem and consistent funding, so we set up
