--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -24,7 +24,7 @@ infrastructure.
 
 ## How are funds distributed?
 
-Donations to the **general fund** will be distributed quarterly by our board. We
+Donations to the general fund will be distributed quarterly by our board. We
 evaluate and assess applications to make sure any grants are awarded to high
 impact projects in the Bitcoin space.
 
@@ -35,7 +35,7 @@ recommendations but will retain sole discretion as to how funds are distributed.
 
 ## How much of my donation goes towards individuals and projects supported by Open Sats?
 
-All donations to the **general fund** and specific, mission-aligned FOSS
+All donations to the general fund and specific, mission-aligned FOSS
 projects are 100% passed through to Open Sats grant recipients. We try our best
 to find donor matching partners to ensure that no transaction fees are withheld
 regardless of payment method (thanks to our generous donors).
