--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -1,6 +1,9 @@
-# Privacy Policy
-
-**Last Updated: May 2, 2023**
+---
+title: Privacy Policy
+summary: "OpenSats Privacy Policy"
+image: /static/images/avatar.png
+layout: PageLayout
+---
 
 Open Sats Initiative&#39;s core purpose is to foster an ecosystem that supports the collaborative and public development of free and open-source software projects (each, a &quot;Project&quot;). This privacy policy (&quot;Privacy Policy&quot;) describes our policies and procedures about the collection, use, disclosure and sharing, or other processing of your personal information when you use our websites (e.g., opensats.org) or participate in or use our project sites (collectively, the &quot;Sites&quot;), as well as when you interact with or participate in our educations and training programs and events. (collectively, the &quot;Services&quot;). This Privacy Policy applies to activities by Open Sats Initiative and its affiliates, subsidiaries and related entities (collectively &quot;Open Sats&quot; &quot;we&quot; or &quot;us&quot;), including activities that we perform for other entities through third party agreements.
 
@@ -101,11 +104,11 @@ We and our third-party providers use cookies, pixel tags, JavaScript, log files,
 
 We have implemented commercially reasonable precautions designed to protect the information we collect from loss, misuse, and unauthorized access, disclosure, alteration, and destruction. Please be aware that despite our best efforts, Open Sats provides no guarantee that any security measure will be completely and totally secure.
 
-We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at support@opensats.org.
+We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at <support@opensats.org>.
 
 **Marketing Choices**
 
-You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing support@opensats.org. You may also unsubscribe from mailing lists via the applicable mailing list&#39;s subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
+You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing <support@opensats.org>. You may also unsubscribe from mailing lists via the applicable mailing list&#39;s subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
 
 **Retention of Your Personal Information**
 
@@ -157,7 +160,7 @@ Please see the section below with our contact information on how to reach Open S
 
 **Recourse, Enforcement, Liability**. Open Sats commits to resolve complaints about our processing of your personal data. European Union, United Kingdom, and Swiss users with inquiries or complaints regarding our processing of Personal data should first contact Open Sats as follows:
 
-Email: support@opensats.org
+Email: <support@opensats.org>
 
 Attention: Information Security
 
@@ -186,3 +189,5 @@ If you have any questions about our practices or this Privacy Policy, please con
 **Changes to the Privacy Policy**
 
 This Policy is current as of the effective date set forth above. If we change our privacy policies and procedures, we will post those changes on this page and/or continue to provide access to a copy of the prior version. If we make any changes to this Privacy Policy that materially change how we treat your personal information, we will endeavor to provide you with reasonable notice of such changes, such as via prominent notice on our Sites or to your email address of record, and where required by law, we will obtain your consent or give you the opportunity to opt out of such changes.
+
+**Last Updated: May 2, 2023**
