Fix markdown issues

--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -5,11 +5,11 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Open Sats Initiative&#39;s core purpose is to foster an ecosystem that supports the collaborative and public development of free and open-source software projects (each, a &quot;Project&quot;). This privacy policy (&quot;Privacy Policy&quot;) describes our policies and procedures about the collection, use, disclosure and sharing, or other processing of your personal information when you use our websites (e.g., opensats.org) or participate in or use our project sites (collectively, the &quot;Sites&quot;), as well as when you interact with or participate in our educations and training programs and events. (collectively, the &quot;Services&quot;). This Privacy Policy applies to activities by Open Sats Initiative and its affiliates, subsidiaries and related entities (collectively &quot;Open Sats&quot; &quot;we&quot; or &quot;us&quot;), including activities that we perform for other entities through third party agreements.
+Open Sats Initiative&#39;s core purpose is to foster an ecosystem that supports the collaborative and public development of free and open-source software projects (each, a "Project"). This privacy policy ("Privacy Policy") describes our policies and procedures about the collection, use, disclosure and sharing, or other processing of your personal information when you use our websites (e.g., opensats.org) or participate in or use our project sites (collectively, the "Sites"), as well as when you interact with or participate in our educations and training programs and events. (collectively, the "Services"). This Privacy Policy applies to activities by Open Sats Initiative and its affiliates, subsidiaries and related entities (collectively "Open Sats" "we" or "us"), including activities that we perform for other entities through third party agreements.
 
-For purposes of the General Data Protection Regulation (&quot;GDPR&quot;), Open Sats is the controller of your personal information. Where processing of personal information is undertaken by our affiliates, subsidiaries and related entities, they are a joint controller with Open Sats Initiative for your personal information.
+For purposes of the General Data Protection Regulation ("GDPR"), Open Sats is the controller of your personal information. Where processing of personal information is undertaken by our affiliates, subsidiaries and related entities, they are a joint controller with Open Sats Initiative for your personal information.
 
-Capitalized terms that are not defined in this Privacy Policy have the meaning given them in our Terms and Conditions (the &quot;Terms&quot;). In this Privacy Policy, &quot;personal information&quot; includes references to &quot;personal data&quot; as defined under applicable laws. Your use of our Sites and Services, and any dispute over privacy, is subject to this Policy and the relevant Terms, including the applicable limitations on damages and the resolution of disputes. The Terms are incorporated by reference into this Policy.
+Capitalized terms that are not defined in this Privacy Policy have the meaning given them in our Terms and Conditions (the "Terms"). In this Privacy Policy, "personal information" includes references to "personal data" as defined under applicable laws. Your use of our Sites and Services, and any dispute over privacy, is subject to this Policy and the relevant Terms, including the applicable limitations on damages and the resolution of disputes. The Terms are incorporated by reference into this Policy.
 
 ## Personal Information That Open Sats Collects
 
@@ -66,7 +66,7 @@ _Automatically Collected Information._ In addition, Open Sats may automatically 
 Open Sats uses the personal information we collect for our legitimate non-proft and charitable business interests, which include the following purposes:
 
 - _Providing our Sites and Services_. To provide the Services and our Sites, to communicate with you about your use of our Sites and Services, to respond to your inquiries, provide support and maintenance of the Sites and for other purposes to support users and the community.
-- _Operating our Open-Source Projects_. To enable communication between and among open-source developers in the community; to facilitate and document Project governance and technical decision-making; to maintain, and make publicly available on a perpetual basis, records regarding intellectual property provenance and license compliance for Project contributions; and for related activities to further Open Sats&#39;s core purpose of fostering an ecosystem that supports the collaborative and public development of free and open-source software projects. See the &quot;Project Integrity and Credit for Attribution&quot; section above for more information.
+- _Operating our Open-Source Projects_. To enable communication between and among open-source developers in the community; to facilitate and document Project governance and technical decision-making; to maintain, and make publicly available on a perpetual basis, records regarding intellectual property provenance and license compliance for Project contributions; and for related activities to further Open Sats&#39;s core purpose of fostering an ecosystem that supports the collaborative and public development of free and open-source software projects. See the "Project Integrity and Credit for Attribution" section above for more information.
 - _Maintain our Training and Certification Programs_. To maintain records about who has attended or registered to attend educational or training programs.
 - _Event Administration_. To plan, organize, and facilitate access to events and related services and activities, and to carry out informative and safe events for participants, including attendees, speakers and sponsors. If you provide us information about disabilities, medical conditions and allergies, we will use this information in order to provide appropriate accommodations for attendees and to ensure their health and safety; we will not use this information for other purposes, unless required by law or as necessary to defend our legal rights. For in-person events requiring attendees to be vaccinated against COVID-19, we use information regarding your COVID-19 vaccination status to provide a safer environment for attendees and staff, in order to confirm vaccination status before permitting access to the event venue space.
 - _Personalization_. To tailor the content and information that we may send or display to you on our Sites and in our Services, to offer location customization and personalized help and instructions and to otherwise personalize your experiences.
@@ -104,11 +104,11 @@ We and our third-party providers use cookies, pixel tags, JavaScript, log files,
 
 We have implemented commercially reasonable precautions designed to protect the information we collect from loss, misuse, and unauthorized access, disclosure, alteration, and destruction. Please be aware that despite our best efforts, Open Sats provides no guarantee that any security measure will be completely and totally secure.
 
-We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at <support@opensats.org>.
+We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at [support@opensats.org].
 
 **Marketing Choices**
 
-You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing <support@opensats.org>. You may also unsubscribe from mailing lists via the applicable mailing list&#39;s subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
+You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing [support@opensats.org]. You may also unsubscribe from mailing lists via the applicable mailing list&#39;s subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
 
 **Retention of Your Personal Information**
 
@@ -116,7 +116,7 @@ We generally keep personal information only for as long as required to fulfill t
 
 **International Information:**
 
-**Scope**. This section applies to individuals in the European Union &quot;EU&quot; (for these purposes, reference to the EU also includes the European Economic Area countries of Iceland, Liechtenstein and Norway and, to the extent applicable, Switzerland).
+**Scope**. This section applies to individuals in the European Union "EU" (for these purposes, reference to the EU also includes the European Economic Area countries of Iceland, Liechtenstein and Norway and, to the extent applicable, Switzerland).
 
 **Data Controller**. Open Sats is the data controller for the processing of Personal data related to donor and non-profit accounts and information on our Sites. You can find our contact information below.
 
@@ -144,23 +144,23 @@ If we are relying on a legitimate interest to process your personal data (unless
 
 Please see the section below with our contact information on how to reach Open Sats to exercise your rights.
 
-**Legitimate Interest**. &quot;Legitimate interests&quot; means our interests in conducting our charitable business and developing a relationship with you. This Privacy Policy describes when we process your Personal data for our legitimate interests, what these interests are and your rights. We will not use your Personal data for activities where the impact on you overrides our interests, unless we have your consent, or those activities are otherwise required or permitted by law.
+**Legitimate Interest**. "Legitimate interests" means our interests in conducting our charitable business and developing a relationship with you. This Privacy Policy describes when we process your Personal data for our legitimate interests, what these interests are and your rights. We will not use your Personal data for activities where the impact on you overrides our interests, unless we have your consent, or those activities are otherwise required or permitted by law.
 
-**International Transfers of Personal Data**. Because Open Sats is a non-profit organization that is not subject to the jurisdiction of the United States Federal Trade Commission, it is not eligible for certification under the EU-U.S. and Swiss-U.S. Privacy Shield frameworks (&quot;Frameworks&quot;) as set forth by the U.S. Department of Commerce regarding the processing of personal data transferred from the EU, United Kingdom, and Switzerland to the U.S. (for these purposes, reference to the EU also includes the European Economic Area countries of Iceland, Liechtenstein and Norway). However, Open Sats commits to process Personal data transferred from the EU to the United States in accordance with the principles of Notice, Choice, Accountability for Onward Transfer, Security, Data Integrity and Purpose Limitation, Access, and Recourse, Enforcement and Liability, as described below.
+**International Transfers of Personal Data**. Because Open Sats is a non-profit organization that is not subject to the jurisdiction of the United States Federal Trade Commission, it is not eligible for certification under the EU-U.S. and Swiss-U.S. Privacy Shield frameworks ("Frameworks") as set forth by the U.S. Department of Commerce regarding the processing of personal data transferred from the EU, United Kingdom, and Switzerland to the U.S. (for these purposes, reference to the EU also includes the European Economic Area countries of Iceland, Liechtenstein and Norway). However, Open Sats commits to process Personal data transferred from the EU to the United States in accordance with the principles of Notice, Choice, Accountability for Onward Transfer, Security, Data Integrity and Purpose Limitation, Access, and Recourse, Enforcement and Liability, as described below.
 
 **Notice and Choice**. This Privacy Policy provides notice of the personal data collected and transferred to the United States and the choices that you have with respect to such personal data. It also provides information about the protections applicable to transferred data below.
 
 **Accountability for Onward Transfers**. We may be accountable for the personal data transfer to third-party service providers. If we are and our third-party service providers process personal data in a manner inconsistent with these principles, we are responsible and liable for the harm caused, unless we prove that we are not responsible for the event giving rise to the damage.
 
-**Security**. We maintain security measures to protect personal data as described in the &quot;Data Security&quot; section of this Privacy Policy.
+**Security**. We maintain security measures to protect personal data as described in the "Data Security" section of this Privacy Policy.
 
 **Data Integrity and Purpose Limitation**. We take reasonable steps to ensure that personal data is reliable for its intended use, and that it is accurate, complete and current for as long as we retain it. We will retain the data as long as necessary for the following purposes: delivering the Services, engaging in customer service, complying with legal obligations, auditing, performing security and fraud prevention, responding to legal and regulatory inquiries, and preserving or defending our legal rights or those of other users or third parties.
 
-**Access**. EU users have certain rights to access, correct, amend, or delete personal data where it is inaccurate, or has been processed in violation of these principles. Please see the &quot;Your Rights&quot; section above for more information on the rights of users in the EU (and, to the extent applicable, users in Switzerland).
+**Access**. EU users have certain rights to access, correct, amend, or delete personal data where it is inaccurate, or has been processed in violation of these principles. Please see the "Your Rights" section above for more information on the rights of users in the EU (and, to the extent applicable, users in Switzerland).
 
 **Recourse, Enforcement, Liability**. Open Sats commits to resolve complaints about our processing of your personal data. European Union, United Kingdom, and Swiss users with inquiries or complaints regarding our processing of Personal data should first contact Open Sats as follows:
 
-Email: <support@opensats.org>
+Email: [support@opensats.org]
 
 Attention: Information Security
 
@@ -176,18 +176,22 @@ The Sites may contain links to third party sites or online services. Please refe
 
 **California Privacy Rights**
 
-Only to the extent that Open Sats meets the minimum thresholds as required under California law to be subject to the California Privacy Rights Act of 2020, residents of California will be able to request and obtain from us once a year, free of charge, a list of the third parties to whom we have disclosed their personal information (if any) for their direct marketing purposes in the prior calendar year, as well as the types of personal information disclosed to those parties. If you are a California resident and would like to request this information, please submit your request in an email to [support@opensats.org](mailto:support@opensats.org). We reserve the right to ask for verification of your California residence and deny this request if Open Sats believes it is not subject to this requirement.
+Only to the extent that Open Sats meets the minimum thresholds as required under California law to be subject to the California Privacy Rights Act of 2020, residents of California will be able to request and obtain from us once a year, free of charge, a list of the third parties to whom we have disclosed their personal information (if any) for their direct marketing purposes in the prior calendar year, as well as the types of personal information disclosed to those parties. If you are a California resident and would like to request this information, please submit your request in an email to [support@opensats.org]. We reserve the right to ask for verification of your California residence and deny this request if Open Sats believes it is not subject to this requirement.
 
 **Contact Us**
 
-If you have any questions about our practices or this Privacy Policy, please contact us at [support@opensats.org](mailto:support@opensats.org), or write to us at:
+If you have any questions about our practices or this Privacy Policy, please contact us at [support@opensats.org], or write to us at:
 
     Open Sats Initiative, Inc.  
     2028 East Ben White Blvd, Suite 240-6969  
     Austin, TX 78741  
 
-**Changes to the Privacy Policy**
+### Changes to the Privacy Policy
 
 This Policy is current as of the effective date set forth above. If we change our privacy policies and procedures, we will post those changes on this page and/or continue to provide access to a copy of the prior version. If we make any changes to this Privacy Policy that materially change how we treat your personal information, we will endeavor to provide you with reasonable notice of such changes, such as via prominent notice on our Sites or to your email address of record, and where required by law, we will obtain your consent or give you the opportunity to opt out of such changes.
 
+---
+
 **Last Updated: May 2, 2023**
+
+[support@opensats.org]: mailto:support@opensats.org
